--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -128,7 +128,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Features\ToolWindow\EditableTextBlock.cs" />
-    <Compile Include="Infrastructure\JobRegistry.cs" />
+    <Compile Include="Infrastructure\ItemRegistry.cs" />
     <Compile Include="Infrastructure\Logger.cs" />
     <Compile Include="Infrastructure\ViewLocator.cs" />
     <Compile Include="Interfaces\ILogger.cs" />
