--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -138,16 +138,15 @@
     <Compile Include="Models\HttpStatus.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Models\JenkinsBuild.cs" />
+    <Compile Include="Models\Ping.cs" />
     <Compile Include="Models\Server.cs" />
     <Compile Include="Models\Template.cs" />
-    <Compile Include="Models\View.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Queries\ViewsQuery.cs" />
     <Compile Include="Infrastructure\RelayCommand.cs" />
     <Compile Include="Infrastructure\Settings.cs" />
     <Compile Include="Infrastructure\TinyIoc.cs" />
