--- a/src/AnyStatus.VSPackage/AnyStatus.VSPackage.csproj
+++ b/src/AnyStatus.VSPackage/AnyStatus.VSPackage.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ToolWindowHost.cs" />
     <Compile Include="ToolWindowCommand.cs" />
-    <Compile Include="VSPackage.cs" />
+    <Compile Include="AnyStatusPackage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
