- added refresh button to treeview item context menu - added tcp port check

--- a/src/AnyStatus.VSPackage/AnyStatus.VSPackage.csproj
+++ b/src/AnyStatus.VSPackage/AnyStatus.VSPackage.csproj
@@ -71,7 +71,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="License.txt">
+    <Content Include="Resources\License.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
