--- a/src/AnyStatus.VSPackage/AnyStatus.VSPackage.csproj
+++ b/src/AnyStatus.VSPackage/AnyStatus.VSPackage.csproj
@@ -73,8 +73,10 @@
     <Content Include="Resources\Icons\Icons.sprite.png">
       <DependentUpon>Icons.sprite</DependentUpon>
     </Content>
-    <Content Include="Resources\Icons\Settings_16x.png" />
-    <Content Include="Resources\Icons\StatusSecurityOK_16x.png" />
+    <None Include="Resources\Icons\Question_16x.png" />
+    <None Include="Resources\Icons\Settings_16x.png" />
+    <None Include="Resources\Icons\StatusSecurityOK_16x.png" />
+    <None Include="Resources\Icons\Refresh_16x.png" />
     <Content Include="Resources\Preview.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
