--- a/src/AnyStatus/packages.config
+++ b/src/AnyStatus/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Extended.Wpf.Toolkit" version="2.9" targetFramework="net452" />
   <package id="FluentScheduler" version="5.0.0" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.ImageCatalog" version="14.3.25407" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.Imaging" version="14.3.25407" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.Shell.14.0" version="14.3.25407" targetFramework="net452" />
