-windows service status - auto scan handlers

--- a/src/AnyStatus.VSPackage/AnyStatus.VSPackage.csproj
+++ b/src/AnyStatus.VSPackage/AnyStatus.VSPackage.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ToolWindowHost.cs" />
     <Compile Include="ToolWindowCommand.cs" />
     <Compile Include="AnyStatusPackage.cs" />
+    <Compile Include="Utils\TypeDiscovery.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Key.snk" />
