- added logger to user settings - user settings refactoring

--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Features\HealthChecks\TravisCIBuild.cs" />
     <Compile Include="Features\ToolWindow\EditableTextBlock.cs" />
     <Compile Include="Infrastructure\ItemRegistry.cs" />
+    <Compile Include="Infrastructure\NullLogger.cs" />
     <Compile Include="Infrastructure\ScheduledJob.cs" />
     <Compile Include="Infrastructure\Logger.cs" />
     <Compile Include="Infrastructure\Retry.cs" />
