--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -148,6 +148,8 @@
     <Compile Include="Features\HealthChecks\WindowsService.cs" />
     <Compile Include="Features\HealthChecks\TravisCIBuild.cs" />
     <Compile Include="Features\ToolWindow\EditableTextBlock.cs" />
+    <Compile Include="Infrastructure\GoogleAnalytics\GoogleAnalyticsReporter.cs" />
+    <Compile Include="Infrastructure\GoogleAnalytics\Preconditions.cs" />
     <Compile Include="Infrastructure\ItemRegistry.cs" />
     <Compile Include="Infrastructure\NullLogger.cs" />
     <Compile Include="Infrastructure\ScheduledJob.cs" />
