--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Features\HealthChecks\Editors\PasswordEditor.cs" />
     <Compile Include="Features\HealthChecks\IScheduledItem.cs" />
     <Compile Include="Features\HealthChecks\RootItem.cs" />
+    <Compile Include="Features\HealthChecks\GitHubIssue.cs" />
     <Compile Include="Infrastructure\Extensions.cs" />
     <Compile Include="Features\HealthChecks\TCP.cs" />
     <Compile Include="Features\HealthChecks\TeamCityBuild.cs" />
