--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -152,11 +152,11 @@
     <Compile Include="Infrastructure\GoogleAnalytics\GoogleAnalyticsReporter.cs" />
     <Compile Include="Infrastructure\GoogleAnalytics\Preconditions.cs" />
     <Compile Include="Interfaces\IJobScheduler.cs" />
-    <Compile Include="Infrastructure\ItemRegistry.cs" />
+    <Compile Include="Core\ItemRegistry.cs" />
     <Compile Include="Core\JobScheduler.cs" />
     <Compile Include="Infrastructure\NullLogger.cs" />
     <Compile Include="Infrastructure\ObjectCloner.cs" />
-    <Compile Include="Infrastructure\ScheduledJob.cs" />
+    <Compile Include="Core\ScheduledJob.cs" />
     <Compile Include="Infrastructure\Logger.cs" />
     <Compile Include="Infrastructure\Retry.cs" />
     <Compile Include="Infrastructure\ViewLocator.cs" />
@@ -178,7 +178,7 @@
     <Compile Include="Infrastructure\RelayCommand.cs" />
     <Compile Include="Infrastructure\Settings.cs" />
     <Compile Include="Infrastructure\TinyIoc.cs" />
-    <Compile Include="Infrastructure\UserSettings.cs" />
+    <Compile Include="Core\UserSettings.cs" />
     <Compile Include="Interfaces\IViewLocator.cs" />
     <Compile Include="Features\New\NewViewModel.cs" />
     <Compile Include="Features\Options\OptionsViewModel.cs" />
