powershell and batch file items

--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -139,7 +139,8 @@
     <Compile Include="Features\Edit\EditViewModel.cs" />
     <Compile Include="Features\HealthChecks\AppVeyorBuild.cs" />
     <Compile Include="Features\HealthChecks\Editors\PasswordEditor.cs" />
-    <Compile Include="Features\HealthChecks\IScheduledItem.cs" />
+    <Compile Include="Features\HealthChecks\BatchFile.cs" />
+    <Compile Include="Interfaces\IScheduledItem.cs" />
     <Compile Include="Features\HealthChecks\RootItem.cs" />
     <Compile Include="Features\HealthChecks\GitHubIssue.cs" />
     <Compile Include="Features\HealthChecks\PowerShell.cs" />
