--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -114,6 +114,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.ServiceProcess" />
@@ -138,6 +139,7 @@
     </Compile>
     <Compile Include="Features\Edit\EditViewModel.cs" />
     <Compile Include="Features\HealthChecks\AppVeyorBuild.cs" />
+    <Compile Include="Features\HealthChecks\Editors\FileEditor.cs" />
     <Compile Include="Features\HealthChecks\Editors\PasswordEditor.cs" />
     <Compile Include="Features\HealthChecks\BatchFile.cs" />
     <Compile Include="Interfaces\IScheduledItem.cs" />
@@ -156,7 +158,6 @@
     <Compile Include="Interfaces\IJobScheduler.cs" />
     <Compile Include="Core\Monitoring\ItemRegistry.cs" />
     <Compile Include="Core\Monitoring\JobScheduler.cs" />
-    <Compile Include="Infrastructure\ObjectCloner.cs" />
     <Compile Include="Core\Monitoring\ScheduledJob.cs" />
     <Compile Include="Infrastructure\Logger.cs" />
     <Compile Include="Infrastructure\Retry.cs" />
