--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -142,7 +142,7 @@
     <Compile Include="Features\HealthChecks\Editors\FileEditor.cs" />
     <Compile Include="Features\HealthChecks\Editors\PasswordEditor.cs" />
     <Compile Include="Features\HealthChecks\BatchFile.cs" />
-    <Compile Include="Interfaces\IScheduledItem.cs" />
+    <Compile Include="Core\Monitoring\IScheduledItem.cs" />
     <Compile Include="Features\HealthChecks\RootItem.cs" />
     <Compile Include="Features\HealthChecks\GitHubIssue.cs" />
     <Compile Include="Features\HealthChecks\PowerShellScript.cs" />
@@ -154,17 +154,17 @@
     <Compile Include="Features\HealthChecks\TravisCIBuild.cs" />
     <Compile Include="Features\ToolWindow\EditableTextBlock.cs" />
     <Compile Include="Infrastructure\GoogleAnalytics\GoogleAnalyticsReporter.cs" />
-    <Compile Include="Infrastructure\GoogleAnalytics\Preconditions.cs" />
-    <Compile Include="Interfaces\IJobScheduler.cs" />
+    <Compile Include="Infrastructure\Preconditions.cs" />
+    <Compile Include="Core\Monitoring\IJobScheduler.cs" />
     <Compile Include="Core\Monitoring\JobScheduler.cs" />
     <Compile Include="Core\Monitoring\ScheduledJob.cs" />
-    <Compile Include="Infrastructure\Logger.cs" />
+    <Compile Include="Core\Logging\Logger.cs" />
     <Compile Include="Infrastructure\Retry.cs" />
-    <Compile Include="Infrastructure\ViewLocator.cs" />
-    <Compile Include="Interfaces\ILogger.cs" />
-    <Compile Include="Interfaces\IUserSettings.cs" />
+    <Compile Include="Core\ViewLocator.cs" />
+    <Compile Include="Core\Logging\ILogger.cs" />
+    <Compile Include="Core\Settings\IUserSettings.cs" />
     <Compile Include="Features\HealthChecks\Folder.cs" />
-    <Compile Include="Interfaces\IHandler.cs" />
+    <Compile Include="Core\Monitoring\IHandler.cs" />
     <Compile Include="Features\HealthChecks\HttpStatus.cs" />
     <Compile Include="Features\HealthChecks\Item.cs" />
     <Compile Include="Features\HealthChecks\JenkinsBuild.cs" />
@@ -180,7 +180,7 @@
     <Compile Include="Core\Settings\Settings.cs" />
     <Compile Include="Infrastructure\TinyIoc.cs" />
     <Compile Include="Core\Settings\UserSettings.cs" />
-    <Compile Include="Interfaces\IViewLocator.cs" />
+    <Compile Include="Core\IViewLocator.cs" />
     <Compile Include="Features\New\NewViewModel.cs" />
     <Compile Include="Features\Options\OptionsViewModel.cs" />
     <Compile Include="Features\ToolWindow\ToolWindowViewModel.cs" />
