--- a/src/AnyStatus.VSPackage/AnyStatus.VSPackage.csproj
+++ b/src/AnyStatus.VSPackage/AnyStatus.VSPackage.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="ContainerBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ToolWindowCmd.cs" />
     <Compile Include="ToolWindowHost.cs" />
     <Compile Include="AnyStatusPackage.cs" />
     <Compile Include="ToolWindowPackage.cs">
