--- a/src/AnyStatus.VSPackage/AnyStatus.VSPackage.csproj
+++ b/src/AnyStatus.VSPackage/AnyStatus.VSPackage.csproj
@@ -54,6 +54,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AnyStatusApp.cs" />
     <Compile Include="ContainerBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ToolWindowCmd.cs" />
